# libcomm14cux

./: .gitignore  CMakeLists.txt  NOTES  README  README.md  README_Arduino  build-mxe.sh  build-win32.sh  doxygen.conf  libcomm14cux.3  libcomm14cux.pc.cmakein
src/: comm14cux.cpp  comm14cux.h  comm14cux_internal.h  comm14cux_version.h.in  constants.c  data.c  data.cpp  doxygen.conf  protocol.c  protocol.cpp  read14cux.c  read14cux.cpp  setup.c  setup.cpp  write14cux.c
